--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
           <div class=" w-[75%] md-:mx-auto rounded-lg overflow-hidden">
               <video x-ref="videoPlayer"
                      id="player"
-                     class="aspect-video"
+                     class="aspect-video w-full h-full"
                      controls
-                     :data-poster="streamPoster"
+                     :poster="streamPoster"
               >
               </video>
           </div>
