--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <main class="grid md:grid-cols-12 gap-8 p-5  md:items-center">
       <div class=" md:col-span-10 flex justify-center ">
-          <div class=" w-[75%] md-:mx-auto rounded-lg overflow-hidden">
+          <div class=" w-[75%] md:mx-auto rounded-lg overflow-hidden shadow-lg">
               <video x-ref="videoPlayer"
                      id="player"
                      class="aspect-video w-full h-full"
