--- a/index.html
+++ b/index.html
@@ -8,61 +8,48 @@
   <title x-text="config?.appTitle || 'TV Channel'">TV Channel</title>
 </head>
 
-<body class="bg-slate-100 flex flex-col relative h-screen w-screen" x-data="app()" x-init="loadChannelData()">
-  <header class="header bg-blue-950 items-center">
+<body class="bg-slate-100 flex flex-col relative h-screen w-full overflow-hidden" x-data="app()"
+  x-init="loadChannelData()">
+  <header class="header bg-blue-950 items-center shrink-0">
     <h1 class="lg:py-6 py-3 tracking-wide text-shadow-white text-white text-center uppercase font-medium">
-        <img src="src/images/logo-nav.png" class="max-h-12 w-auto mx-auto" :alt="channelName">
+      <img src="src/images/logo-nav.png" class="max-h-12 w-auto mx-auto" :alt="channelName">
     </h1>
   </header>
 
-  <main class="grid md:grid-cols-12 gap-8 p-5  md:items-center h-screen">
-      <div class=" md:col-span-10 flex justify-center ">
-          <div class="w-full md:w-[75%] md:mx-auto rounded-lg overflow-hidden shadow-lg">
-              <video x-ref="videoPlayer"
-                     id="player"
-                     class="aspect-video w-full h-full"
-                     controls
-                     playsinline
-                     :poster="streamPoster"
-              >
-              </video>
-          </div>
+  <main class="grid md:grid-cols-12 gap-8 p-5 md:items-center flex-1 w-full relative">
+    <div class=" md:col-span-10 flex justify-center ">
+      <div class="w-full md:w-[75%] md:mx-auto rounded-lg overflow-hidden shadow-lg">
+        <video x-ref="videoPlayer" id="player" class="aspect-video w-full h-full" controls playsinline
+          :poster="streamPoster">
+        </video>
       </div>
-      <div class="md:col-span-2">
-          <nav class="grid md:flex">
-              <ul class="flex md:flex-col gap-4 items-center justify-center ">
-                  <template x-for="(url, platform) in socialLinks" :key="platform">
-                      <li x-show="url">
-                          <a
-                                  :href="url"
-                                  target="_blank"
-                                  class="text-gray-700 hover:text-blue-600 transition-colors duration-200 rounded-full hover:bg-white hover:bg-opacity-20"
-                          >
-                              <img
-                                      class="size-10"
-                                      :src="`${config.assetBaseUrl}/images/${platform}.svg`"
-                                      :alt="platform"
-                              >
-                          </a>
-                      </li>
-                  </template>
-              </ul>
-          </nav>
-      </div>
+    </div>
+    <div class="md:col-span-2">
+      <nav class="grid md:flex">
+        <ul class="flex md:flex-col gap-4 items-center justify-center ">
+          <template x-for="(url, platform) in socialLinks" :key="platform">
+            <li x-show="url">
+              <a :href="url" target="_blank"
+                class="text-gray-700 hover:text-blue-600 transition-colors duration-200 rounded-full hover:bg-white hover:bg-opacity-20">
+                <img class="size-10" :src="`${config.assetBaseUrl}/images/${platform}.svg`" :alt="platform">
+              </a>
+            </li>
+          </template>
+        </ul>
+      </nav>
+    </div>
   </main>
-  
-  <div x-show="loading" 
-       x-transition 
-       class="absolute transition-all  inset-0 bg-blue-950/90 backdrop-blur-lg grid items-center justify-center">
-    <svg class="size-10 animate-spin text-white" xmlns="http://www.w3.org/2000/svg" fill="none"
-      viewBox="0 0 24 24">
+
+  <div x-show="loading" x-transition
+    class="absolute transition-all  inset-0 bg-blue-950/90 backdrop-blur-lg grid items-center justify-center">
+    <svg class="size-10 animate-spin text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
       <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
       <path class="opacity-75" fill="currentColor"
         d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
       </path>
     </svg>
   </div>
-  
+
   <script type="module" src="/src/main.js"></script>
 </body>
 
